# rust-playground

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  rust.yml
src/: main.rs
