[package]
name = "physicsboi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["wayland"] }
bevy_rapier2d = { version = "0.21", features = ["simd-stable"] }
bevy_easings = "0.10.0"
rand = "0.8.5"
bevy-inspector-egui = "0.18.0"
bevy_prototype_lyon = "0.8.0"
interpolation = "0.2.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
